--- a/base-gitlab/docker-compose.yml
+++ b/base-gitlab/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       environment:
         TZ: 'Asia/Shanghai'
         GITLAB_OMNIBUS_CONFIG: |
-          external_url 'http://172.16.10.161:8929/'
+          #external_url 'http://172.16.10.161:8929/'
           #gitlab_rails['gitlab_shell_ssh_port'] = 2224
           gitlab_rails['time_zone'] = 'Asia/Shanghai'
       ports:
