--- a/base-gitlab/docker-compose.yml
+++ b/base-gitlab/docker-compose.yml
@@ -6,11 +6,11 @@ services:
       restart: always
       privileged: true
       user: root
-      hostname: 'ip-172-16-10-161'
+      #hostname: 'ip-172-16-10-161'
       environment:
         TZ: 'Asia/Shanghai'
         GITLAB_OMNIBUS_CONFIG: |
-          #external_url 'http://172.16.10.161:8929/'
+          external_url 'http://0.0.0.0:8929/'
           #gitlab_rails['gitlab_shell_ssh_port'] = 2224
           gitlab_rails['time_zone'] = 'Asia/Shanghai'
       ports:
