--- a/oracle/orace19c-docker-compose.yml
+++ b/oracle/orace19c-docker-compose.yml
@@ -2,20 +2,20 @@ version: '2'
 
 services:
   oracle19c:
-    image: 'oracle/database:19.3.0-ee'
+    image: 'oracle/database:19.3.0-ee-patch'
     privileged: true
     user: oracle
     restart: always
+    hostname: oracle19c
     environment:
+      - ORACLE_HOSTNAME=oracle19c
       - TZ=Asia/Shanghai
       - ORACLE_SID=marktest
       - ORACLE_UNQNAME=marktest
-      - ORACLE_HOSTNAME=oracle19c
-      #- ORACLE_PDB=marktestdb
       - ORACLE_PWD=O4bkVHCHI0Wb8h2H
       - ORACLE_MEM=5000
-      - INIT_SGA_SIZE=40960 #40G
-      - INIT_PGA_SIZE=10240 #10G
+      - INIT_SGA_SIZE=40960 #40G,这里只是建库的初始值,后期可以在数据库重新设置
+      - INIT_PGA_SIZE=10240 #10G,这里只是建库的初始值,后期可以在数据库重新设置
       - ORACLE_EDITION=19.3.0
       - ORACLE_CHARACTERSET=AL32UTF8
     ports:
@@ -23,7 +23,7 @@ services:
       - '5500:5500'
     volumes:
       - '/home/opts/oracle19c/data:/opt/oracle/oradata'
-      - '/home/opts/oracle19c/scripts/startup:/opt/oracle/scripts/startup'
+      - '/home/opts/oracle19c/scripts/:/opt/oracle/scripts/'
       - '/home/opts/oracle19c/exp_dir:/home/oracle/exp_dir'
       
     networks:
