--- a/oracle19.3/orace19c-slave-docker-compose.yml
+++ b/oracle19.3/orace19c-slave-docker-compose.yml
@@ -6,9 +6,12 @@ services:
     privileged: true
     user: oracle
     restart: always
-    hostname: oracle19c
+    hostname: oracle19c-slave-rac
+    extra_hosts:
+      - "oracle19c-master:10.10.10.121"
+      - "oracle19c-slave:10.10.10.121"
     environment:
-      - ORACLE_HOSTNAME=oracle19c
+      - ORACLE_HOSTNAME=oracle19c-slave
       - TZ=Asia/Shanghai
       - ORACLE_SID=marktest
       - ORACLE_UNQNAME=marktest
@@ -19,12 +22,13 @@ services:
       - ORACLE_EDITION=19.3.0
       - ORACLE_CHARACTERSET=AL32UTF8
     ports:
-      - '1521:1521'
-      - '5500:5500'
+      - '1522:1521'
+      - '5501:5500'
     volumes:
-      - '/home/opts/oracle19c/data:/opt/oracle/oradata'
-      - '/home/opts/oracle19c/scripts/:/opt/oracle/scripts/'
-      - '/home/opts/oracle19c/exp_dir:/home/oracle/exp_dir'
+      - '/home/opts/oracle19c-slave/data:/opt/oracle/oradata'
+      - '/home/opts/oracle19c-slave/scripts/:/opt/oracle/scripts/'
+      - '/home/opts/oracle19c-slave/exp_dir:/home/oracle/exp_dir'
+      - '/etc/localtime:/etc/localtime'
       
     networks:
       - mynet
