--- a/oracle19.3/oracle19c-singleinstance-docker-compose.yml
+++ b/oracle19.3/oracle19c-singleinstance-docker-compose.yml
@@ -6,15 +6,12 @@ services:
     privileged: true
     user: oracle
     restart: always
-    hostname: oracle19c-slave-rac
-    extra_hosts:
-      - "oracle19c-master:10.10.10.121"
-      - "oracle19c-slave:10.10.10.121"
+    hostname: oracle19c-single
     environment:
-      - ORACLE_HOSTNAME=oracle19c-slave
+      - ORACLE_HOSTNAME=oracle19c
       - TZ=Asia/Shanghai
-      - ORACLE_SID=oracle19cdb1
-      - ORACLE_UNQNAME=oracle19cdb1
+      - ORACLE_SID=oracle19cdb
+      - ORACLE_UNQNAME=oracle19cdb
       - ORACLE_PWD=O4bkVHCHI0Wb8h2H
       - ORACLE_MEM=5000
       - INIT_SGA_SIZE=40960 #40G,这里只是建库的初始值,后期可以在数据库重新设置
@@ -22,12 +19,12 @@ services:
       - ORACLE_EDITION=19.3.0
       - ORACLE_CHARACTERSET=AL32UTF8
     ports:
-      - '1522:1521'
-      - '5501:5500'
+      - '1521:1521'
+      - '5500:5500'
     volumes:
-      - '/home/opts/oracle19c-slave/data:/opt/oracle/oradata'
-      - '/home/opts/oracle19c-slave/scripts/:/opt/oracle/scripts/'
-      - '/home/opts/oracle19c-slave/exp_dir:/home/oracle/exp_dir'
+      - '/home/opts/oracle19c-master/data:/opt/oracle/oradata'
+      - '/home/opts/oracle19c-master/scripts/:/opt/oracle/scripts/'
+      - '/home/opts/oracle19c-master/exp_dir:/home/oracle/exp_dir'
       - '/etc/localtime:/etc/localtime'
       
     networks:
